Bug 130753 - What's this message not updating element name
Summary: What's this message not updating element name
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-13 10:01 UTC by mvillarino
Modified: 2006-07-14 18:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mvillarino 2006-07-13 10:01:16 UTC
Version:           1.4.4 (using KDE KDE 3.5.3)
Installed from:    Debian testing/unstable Packages
OS:                Linux

The What's this message "Here you can see the atomic hull of %1. %2 has the configuration %3", shown at the tab "atomic model", in the dialog that pop-up when clicking over an element at the periodic table, does not updates the name of the element when you click on another.
Comment 1 Pino Toscano 2006-07-14 18:31:26 UTC
SVN commit 562385 by pino:

Set the Whats This when updating the dialog, not when creating the dialog.

BUG: 130753


 M  +5 -5      detailinfodlg.cpp  


--- branches/KDE/3.5/kdeedu/kalzium/src/detailinfodlg.cpp #562384:562385
@@ -348,11 +348,6 @@
 	QVBoxLayout *modelLayout = new QVBoxLayout( m_pModelTab );
 	modelLayout->setMargin( 0 );
 	wOrbits = new OrbitsWidget( m_pModelTab );
-	QWhatsThis::add( wOrbits,
-	    i18n( "Here you can see the atomic hull of %1. %2 has the configuration %3." )
-	    .arg( m_element->elname() )
-	    .arg( m_element->elname() )
-	    .arg( m_element->parsedOrbits() ) );
 	modelLayout->addWidget( wOrbits );
 
 	// html tabs
@@ -399,6 +394,11 @@
 
 	// updating atomic model tab
 	wOrbits->setElementNumber( m_elementNumber );
+	QWhatsThis::add( wOrbits,
+	    i18n( "Here you can see the atomic hull of %1. %2 has the configuration %3." )
+	    .arg( m_element->elname() )
+	    .arg( m_element->elname() )
+	    .arg( m_element->parsedOrbits() ) );
 
 	// updating html tabs
 	fillHTMLTab( m_htmlpages["chemical"], getHtml( CHEMICAL ) );
Comment 2 Pino Toscano 2006-07-14 18:31:27 UTC
SVN commit 562386 by pino:

Set the Whats This when updating the dialog, not when creating the dialog.

CCBUG: 130753


 M  +7 -7      detailinfodlg.cpp  


--- trunk/KDE/kdeedu/kalzium/src/detailinfodlg.cpp #562385:562386
@@ -401,13 +401,6 @@
 	QVBoxLayout *modelLayout = new QVBoxLayout( m_pModelTab );
 	modelLayout->setMargin( 0 );
 	wOrbits = new OrbitsWidget( m_pModelTab );
-/*
-	wOrbits->setWhatsThis(
-	    i18n( "Here you can see the atomic hull of %1. %2 has the configuration %3." )
-	    .arg( m_element->dataAsString( ChemicalDataObject::name ) )
-	    .arg( m_element->dataAsString( ChemicalDataObject::name ) )
-	    .arg( "" ));//m_element->parsedOrbits() ) );
-*/
 	modelLayout->addWidget( wOrbits );
 
 	// html tabs
@@ -458,6 +451,13 @@
 
 	// updating atomic model tab
 	wOrbits->setElementNumber( m_elementNumber );
+/*
+	wOrbits->setWhatsThis(
+	    i18n( "Here you can see the atomic hull of %1. %2 has the configuration %3." )
+	    .arg( m_element->dataAsString( ChemicalDataObject::name ) )
+	    .arg( m_element->dataAsString( ChemicalDataObject::name ) )
+	    .arg( "" ));//m_element->parsedOrbits() ) );
+*/
 
 	// updating html tabs
 	fillHTMLTab( m_htmlpages["chemical"], getHtml( CHEMICAL ) );