Set the Whats This when updating the dialog, not when creating the dialog.

BUG: 130753

svn path=/branches/KDE/3.5/kdeedu/kalzium/; revision=562385